Update html structure

--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,13 @@
 .container {
   font-family: "Mukta", sans-serif;
+  text-align: center;
+}
+.weather-app {
   background: #e3f2fd;
   border: 3px solid #0d47a1;
   border-radius: 5px;
   color: #000;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-  text-align: center;
 }
 .current-icon {
   font-size: 150px;
