--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,60 @@
 }
 .weather-app {
   background: #e3f2fd;
-  border: 3px solid #0d47a1;
-  border-radius: 5px;
+  border: 1px solid #0d47a1;
+  border-radius: 10px;
   color: #000;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  max-width: 700px;
+  margin: 30px auto;
+  padding: 20px;
 }
 .current-icon {
   font-size: 150px;
+}
+.day-0 {
+  border: 1px solid #0d47a1;
+  border-radius: 5px;
+  padding: 5px;
+}
+.day-1 {
+  border: 1px solid #0d47a1;
+  border-radius: 5px;
+  padding: 5px;
+}
+.day-2 {
+  border: 1px solid #0d47a1;
+  border-radius: 5px;
+  padding: 5px;
+}
+.day-3 {
+  border: 1px solid #0d47a1;
+  border-radius: 5px;
+  padding: 5px;
+}
+.day-4 {
+  border: 1px solid #0d47a1;
+  border-radius: 5px;
+  padding: 5px;
+}
+.day-5 {
+  border: 1px solid #0d47a1;
+  border-radius: 5px;
+  padding: 5px;
+}
+h1 {
+  font-size: 30px;
+}
+h3 {
+  line-height: 28px;
+  font-size: 24px;
+  font-weight: 100px;
+  padding-bottom: 15px;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
 }
