--- a/src/style.css
+++ b/src/style.css
@@ -28,12 +28,7 @@
 .description {
   font-size: 20px;
 }
-.day-0,
-.day-1,
-.day-2,
-.day-3,
-.day-4,
-.day-5 {
+.day {
   border: 1px solid #0d47a1;
   border-radius: 5px;
   padding: 15px 0px;
