--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   max-width: 600px;
   margin: 30px auto;
+  margin-bottom: 10px;
   padding: 20px;
 }
 .search-bar {
@@ -48,7 +49,7 @@
   font-size: 15px;
 }
 .weather-forecast-low {
-  opacity: 0.4;
+  opacity: 0.5;
 }
 h1 {
   font-size: 20px;
