--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,7 @@
   border-radius: 5px;
   padding: 15px 0px;
   font-size: 15px;
+  background: #bbdefb;
 }
 .weather-forecast-low {
   opacity: 0.5;
